--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
     <div id="middleBottom" class="row">
       <div class="col">
         <p>אני איתי הממי, בן 24 מפתח תקווה<br>בונה אתרים לבעלי עסקים קטנים/בינוניים שרוצים לשדרג את העסק שלהם ביעילות
-          ובזול</p>
+          ובזול<br>ליצירת קשר לחצו על הטלפון או על הווצאפ</p>
       </div>
     </div>
-
     <div id="projects" class="row">
       <div class="col">
         <p>:צפו באתרי הלקוחות שלי</p>
@@ -73,8 +72,8 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <a href="https://api.whatsapp.com/send?phone=0545547237&text=שלום, אני מעוניין לקבל אתר בחינם לעסק שלי, אשמח לקבל יותר פרטים" class="float"
-      target="_blank">
+    <a href="https://api.whatsapp.com/send?phone=0545547237&text=שלום, אני מעוניין לקבל אתר בחינם לעסק שלי, אשמח לקבל יותר פרטים"
+      class="float" target="_blank">
       <i class="fa fa-whatsapp my-float"></i>
     </a>
     <a href="tel:0545547237" class="floatTel"><i class="fa fa-phone fa-rotate-270 my-float"></i></a>
