--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
-          <a href="https://itayt321.github.io/amalbinWebsite/" target="_blank"><img src="img1.jpg" class="d-block w-100"
+          <a href="https://itayt321.github.io/AmavrikWebsite/" target="_blank"><img src="img1.jpg" class="d-block w-100"
               alt="img1.jpg"></a>
         </div>
         <div class="carousel-item" data-bs-interval="2000">
